* Added xinput_controller_11_6_1_0_windows.
* GUI warning when running with llvmpipe software renderer.
* Fixed caps lock.
* Fix loading of bundled gamepad configs for macOS.
* Fix decoding on non-ascii %-escaped file names on directory HDs.
* Fixed loading compressed resources from fs-uae.dat on big-endian CPU.
* Fix compilation with --disable-jit.

Version 2.9.0dev:

* Fix mouse input on Windows with raw keyboard input enabled.
* Alt+F4 and Cmd+Q will no longer quit FS-UAE (in full keyboard emulation mode).
* Use raw input on Windows again (allows grabbing of Windows keys, etc).
* New option raw_input = 0 will disable use of raw input for keyboard.
* Fixed loading shaders from fs-uae.dat.
* Updated Xbox 360 configs for Linux.
* Updated emulation core from WinUAE 3300b2.

Version 2.7.16dev:

* Add -no-pie (unless JIT is explicitly disabled) if supported by linker.
* Removed dependency on GLEW, use GLAD OpenGL loader instead.
* Check if SDL2 uses the X11 subsystem before using X11 directly.
* Fixed crash when using the Wayland SDL2 driver.

Version 2.7.15dev:

* New option clipboard_sharing.
* Translation fix for Fedora.
* Do do install unused files to $prefix/share/fs-uae.
* Packaging fix for Linux standalone version (fixes crash on Ubuntu 16.04).
* Use embedded RUNPATHs instead of LD_LIBRARY_PATH for generic Linux versions.
* Imported updated translations from crowdin.com.

Version 2.7.14dev:

* Fixed reserved word problem ("filter") in crt.shader.
* Fixes for earlier vpar merge (fs-uae/issues/93).
* Added segtracker to UAE debugger [cnvogelg].
* Imported updated translations from crowdin.com.

Version 2.7.13dev:

* JIT on x86-64: Handle it gracefully when 2 GB virtual memory could not
  be allocated (reduce size of allocation region).
* A bit more flexible VM allocation function.
* New option expect_version (used by FS-UAE Launcher).
* Fixed middle mouse button ungrabbing with more than 1 keyboard joystick.