@@ -66,6 +66,7 @@ Version 2.9.1dev:
 * Fix decoding on non-ascii %-escaped file names on directory HDs.
 * Fixed loading compressed resources from fs-uae.dat on big-endian CPU.
 * Fix compilation with --disable-jit.
+* Updated emulation core from WinUAE 3300b3.
 
 Version 2.9.0dev:
 
